--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,19 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.4.1</h2>
+      <h3>New</h3>
+      <ul>
+        <li>Migrated custom date format to main code #2734</li>
+        <li>Added Date Range functionality #2766</li>
+      </ul>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Leading delimiter added when multipleDates #2766</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.2.10</h2>
       <h3>Bug fixes</h3>
       <ul>
