--- a/src/docs/partials/options/index.html
+++ b/src/docs/partials/options/index.html
@@ -7,7 +7,7 @@
     The current options can be retrieved e.g. <code>datetimepicker1.optionsStore.options</code>.
   </p>
   <p>
-    Options can be updated through the <a href='../functions.html#updateOptions'><code>updateOptions</code>
+    Options can be updated through the <a href='../functions/#updateOptions'><code>updateOptions</code>
     function</a>.
   </p>
   <p>
@@ -21,121 +21,117 @@
 
   <pre id='defaults'>
 <code class='language-js'>new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
-  {
-    restrictions: {
-      minDate: undefined,
-      maxDate: undefined,
-      disabledDates: [],
-      enabledDates: [],
-      daysOfWeekDisabled: [],
-      disabledTimeIntervals: [],
-      disabledHours: [],
-      enabledHours: []
+{
+  allowInputToggle: false,
+  container: undefined,
+  dateRange: false,
+  debug: false,
+  defaultDate: undefined,
+  display: {
+    icons: {
+      type: 'icons',
+      time: 'fa-solid fa-clock',
+      date: 'fa-solid fa-calendar',
+      up: 'fa-solid fa-arrow-up',
+      down: 'fa-solid fa-arrow-down',
+      previous: 'fa-solid fa-chevron-left',
+      next: 'fa-solid fa-chevron-right',
+      today: 'fa-solid fa-calendar-check',
+      clear: 'fa-solid fa-trash',
+      close: 'fa-solid fa-xmark'
     },
-    display: {
-      icons: {
-        type: 'icons',
-        time: 'fa-solid fa-clock',
-        date: 'fa-solid fa-calendar',
-        up: 'fa-solid fa-arrow-up',
-        down: 'fa-solid fa-arrow-down',
-        previous: 'fa-solid fa-chevron-left',
-        next: 'fa-solid fa-chevron-right',
-        today: 'fa-solid fa-calendar-check',
-        clear: 'fa-solid fa-trash',
-        close: 'fa-solid fa-xmark'
-      },
-      sideBySide: false,
-      calendarWeeks: false,
-      viewMode: 'calendar',
-      toolbarPlacement: 'bottom',
-      keepOpen: false,
-      buttons: {
-        today: false,
-        clear: false,
-        close: false
-      },
-      components: {
-        calendar: true,
-        date: true,
-        month: true,
-        year: true,
-        decades: true,
-        clock: true,
-        hours: true,
-        minutes: true,
-        seconds: false,
-        useTwentyfourHour: undefined
-      },
-      inline: false,
-      theme: 'auto'
+    sideBySide: false,
+    calendarWeeks: false,
+    viewMode: 'calendar',
+    toolbarPlacement: 'bottom',
+    keepOpen: false,
+    buttons: {
+      today: false,
+      clear: false,
+      close: false
     },
-    stepping: 1,
-    useCurrent: true,
-    defaultDate: undefined,
-    localization: {
-      today: 'Go to today',
-      clear: 'Clear selection',
-      close: 'Close the picker',
-      selectMonth: 'Select Month',
-      previousMonth: 'Previous Month',
-      nextMonth: 'Next Month',
-      selectYear: 'Select Year',
-      previousYear: 'Previous Year',
-      nextYear: 'Next Year',
-      selectDecade: 'Select Decade',
-      previousDecade: 'Previous Decade',
-      nextDecade: 'Next Decade',
-      previousCentury: 'Previous Century',
-      nextCentury: 'Next Century',
-      pickHour: 'Pick Hour',
-      incrementHour: 'Increment Hour',
-      decrementHour: 'Decrement Hour',
-      pickMinute: 'Pick Minute',
-      incrementMinute: 'Increment Minute',
-      decrementMinute: 'Decrement Minute',
-      pickSecond: 'Pick Second',
-      incrementSecond: 'Increment Second',
-      decrementSecond: 'Decrement Second',
-      toggleMeridiem: 'Toggle Meridiem',
-      selectTime: 'Select Time',
-      selectDate: 'Select Date',
-      dayViewHeaderFormat: { month: 'long', year: '2-digit' },
-      locale: 'default',
-      startOfTheWeek: 0,
-      /**
-       * This is only used with the customDateFormat plugin
-       */
-      dateFormats: {
-        LTS: 'h:mm:ss T',
-        LT: 'h:mm T',
-        L: 'MM/dd/yyyy',
-        LL: 'MMMM d, yyyy',
-        LLL: 'MMMM d, yyyy h:mm T',
-        LLLL: 'dddd, MMMM d, yyyy h:mm T'
-      },
-      /**
-       * This is only used with the customDateFormat plugin
-       */
-      ordinal: (n) => n,
-      /**
-       * This is only used with the customDateFormat plugin
-       */
-      format: 'L'
+    components: {
+      calendar: true,
+      date: true,
+      month: true,
+      year: true,
+      decades: true,
+      clock: true,
+      hours: true,
+      minutes: true,
+      seconds: false,
+      useTwentyfourHour: undefined
     },
-    keepInvalid: false,
-    debug: false,
-    allowInputToggle: false,
-    viewDate: new DateTime(),
-    multipleDates: false,
-    multipleDatesSeparator: '; ',
-    promptTimeOnDateChange: false,
-    promptTimeOnDateChangeTransitionDelay: 200,
-    meta: {},
-    container: undefined
-  }
-)</code>
+    inline: false,
+    theme: 'auto'
+  },
+  keepInvalid: false,
+  localization: {
+    clear: 'Clear selection',
+    close: 'Close the picker',
+    dateFormats: DefaultFormatLocalization.dateFormats,
+    dayViewHeaderFormat: { month: 'long', year: '2-digit' },
+    decrementHour: 'Decrement Hour',
+    decrementMinute: 'Decrement Minute',
+    decrementSecond: 'Decrement Second',
+    format: DefaultFormatLocalization.format,
+    hourCycle: DefaultFormatLocalization.hourCycle,
+    incrementHour: 'Increment Hour',
+    incrementMinute: 'Increment Minute',
+    incrementSecond: 'Increment Second',
+    locale: DefaultFormatLocalization.locale,
+    nextCentury: 'Next Century',
+    nextDecade: 'Next Decade',
+    nextMonth: 'Next Month',
+    nextYear: 'Next Year',
+    ordinal: DefaultFormatLocalization.ordinal,
+    pickHour: 'Pick Hour',
+    pickMinute: 'Pick Minute',
+    pickSecond: 'Pick Second',
+    previousCentury: 'Previous Century',
+    previousDecade: 'Previous Decade',
+    previousMonth: 'Previous Month',
+    previousYear: 'Previous Year',
+    selectDate: 'Select Date',
+    selectDecade: 'Select Decade',
+    selectMonth: 'Select Month',
+    selectTime: 'Select Time',
+    selectYear: 'Select Year',
+    startOfTheWeek: 0,
+    today: 'Go to today',
+    toggleMeridiem: 'Toggle Meridiem'
+  },
+  meta: {},
+  multipleDates: false,
+  multipleDatesSeparator: '; ',
+  promptTimeOnDateChange: false,
+  promptTimeOnDateChangeTransitionDelay: 200,
+  restrictions: {
+    minDate: undefined,
+    maxDate: undefined,
+    disabledDates: [],
+    enabledDates: [],
+    daysOfWeekDisabled: [],
+    disabledTimeIntervals: [],
+    disabledHours: [],
+    enabledHours: []
+  },
+  stepping: 1,
+  useCurrent: true,
+  viewDate: new DateTime()
+})</code>
 </pre>
+
+  <div class='row'>
+    <h2 id='dateRange'>dateRange <small>(as of 6.4.1)</small> <a class='anchor-link' aria-label='Anchor' href='#dateRange'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a>
+    </h2>
+    <p>
+      <strong>Accepts</strong> boolean <strong>Defaults:</strong> false<br />
+      <img src='/6/images/date-range.png' class='img-fluid img-thumbnail d-block' alt='date range example'>
+     Date Range work similar to multi date. You should also set multiDateSeparator with what you want the two values to be separated with. This option allows the user to select two dates and highlights all the dates in range between. Validation still takes place. The range will be consider invalid if <strong>any</strong> of the dates in the range are disabled.
+    </p>
+  </div>
 
   <div class='row'>
     <h2 id='stepping'>stepping<a class='anchor-link' aria-label='Anchor' href='#stepping'><i
