--- a/src/docs/partials/plugins/customDateFormat.html
+++ b/src/docs/partials/plugins/customDateFormat.html
@@ -1,7 +1,7 @@
 <page-body>
   <div class='row'>
     <div class='alert alert-info'>
-      <i class="fa-solid fa-exclamation"></i> This is no longer a plugin and is included in the DateTime object.
+      <i class="fa-solid fa-exclamation"></i> This is no longer a plugin. It's now included directly.
     </div>
     <p>
       Use the boxes below to set a format string and the locale of the sample picker and click "Change" to update the
@@ -203,16 +203,6 @@ const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(
           <td>2 digit second, e.g. 0...59</td>
           <td>47</td>
         </tr>
-        <!--tr>
-          <td>fff</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>t</td>
-          <td></td>
-          <td></td>
-        </tr-->
         <tr>
           <td>T</td>
           <td>Meridiem</td>
@@ -222,12 +212,6 @@ const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(
       </table>
     </div>
   </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/solid.min.js'
-          integrity='sha512-Qc+cBMt/4/KXJ1F6nNQahXIsgPygHM4S2XWChoumV8qkpZ9oO+gBDBEpOxgbkQQ/6DlHx6cUxa5nBhEbuiR8xw=='
-          crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-  <script defer src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/fontawesome.min.js'
-          integrity='sha512-KCwrxBJebca0PPOaHELfqGtqkUlFUCuqCnmtydvBSTnJrBirJ55hRG5xcP4R9Rdx9Fz9IF3Yw6Rx40uhuAHR8Q=='
-          crossorigin='anonymous' referrerpolicy='no-referrer'></script>
 </page-body>
 
 <page-meta>
