--- a/src/docs/partials/datetime.html
+++ b/src/docs/partials/datetime.html
@@ -1,12 +1,11 @@
 <page-body>
   <p>
-    In v6 I dropped moment as a required library since it is no longer recommended. Almost all of the functions in the
-    picker make use of my custom DateTime class which extends the native Date object. You can read more about it on <a
-    href='https://eonasdan.com/posts/date-time-library.html' target='_blank'>my blog.</a>
+    In v6 I dropped moment as a required library since it is no longer recommended. Almost all the functions in the
+    picker make use of my custom DateTime class which extends the native Date object.
   </p>
   <p>
-    Because I am simply extending the native date object, any returned values will still behave like a date object. Which
-    means you don't need to adpot using DateTime in your project unless you want to. Once less library to worry about!
+    Because I am simply extending the native date object, any returned values will still behave like a date object.
+    Which means you don't need to adopt using DateTime in your project unless you want to. Once less library to worry about!
   </p>
 </page-body>
 
