--- a/src/docs/partials/functions.html
+++ b/src/docs/partials/functions.html
@@ -1,10 +1,10 @@
 <page-body>
     <meta http-equiv="refresh" content="0; URL=https://getdatepicker.com/6/functions">
-    <link rel="canonical" href="https://getdatepicker.com/6/functions">
+    <link rel="canonical" href="https://getdatepicker.com/6/functions/">
 
     The functions have been split up and moved to a different page.
 
-    Redirecting to <a href="https://getdatepicker.com/6/functions">https://getdatepicker.com/6/functions</a>
+    Redirecting to <a href="https://getdatepicker.com/6/functions/">https://getdatepicker.com/6/functions</a>
 </page-body>
 
 <page-meta>
