* fixed pr workflow * added new sponsor

--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -70,9 +70,40 @@
           <p>Looking for a template with the datepicker ready to go? Then get check out these templates from our
             partners.</p>
         </div>
-        <div class='row center-block'>
+        <div class='row center-block mb-5'>
           <div class='col-12'>
-            <h4 class='row'>Creative Tim</h4>
+            <h4 class='row'>Metronic by keenthemes</h4>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://1.envato.market/7mWAG5' target='_blank'
+               class='affiliate-project' rel='noopener'>
+              <img src='./6/images/metronic-thumb-1.png'
+                   alt='Metronic' class='img-fluid'>
+            </a>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://1.envato.market/7mWAG5'
+               target='_blank' class='affiliate-project' rel='noopener'>
+              <img src='./6/images/metronic-thumb-2.png'
+                   alt='Metronic 2' class='img-fluid'>
+            </a>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://1.envato.market/7mWAG5' target='_blank'
+               class='affiliate-project' rel='noopener'>
+              <img
+                src='./6/images/metronic-thumb-3.png'
+                alt='Metronic 3' class='img-fluid'>
+            </a>
+          </div>
+        </div>
+        <hr/>
+        <div class='row center-block mt-5'>
+          <h4>Check out this other great themes.</h4>
+        </div>
+        <div class='row center-block mt-3 mb-5'>
+          <div class='col-12'>
+            <h4 class='row'>From Creative Tim</h4>
           </div>
           <div class='col-sm-12 col-md-3'>
             <a href='https://www.creative-tim.com/product/material-dashboard-pro?partner=127205' target='_blank'
@@ -100,9 +131,10 @@
             </a>
           </div>
         </div>
-        <div class='row center-block'>
+        <hr/>
+        <div class='row center-block mt-5'>
           <div class='col-12'>
-            <h4 class='row'>Flatlogic</h4>
+            <h4 class='row'>From Flatlogic</h4>
           </div>
           <div class='col-sm-12 col-md-3'>
             <a href='https://flatlogic.com/templates/light-blue-html5?ref=dg1K3bfa8w' target='_blank'
