--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -67,7 +67,7 @@
       <div class='container'>
         <div class='row center-block'>
           <h3>Get awesome Dashboard Templates</h3>
-          <p>Looking for a template with the datepicker ready to go? Then get check out these templates from our
+          <p>Looking for a template with the datepicker ready to go? Then check out these templates from our
             partners.</p>
         </div>
         <div class='row center-block mb-5'>
@@ -99,7 +99,7 @@
         </div>
         <hr/>
         <div class='row center-block mt-5'>
-          <h4>Check out this other great themes.</h4>
+          <h4>Check out these other great themes.</h4>
         </div>
         <div class='row center-block mt-3 mb-5'>
           <div class='col-12'>
