Add Bootstrap Icons plugin

--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -76,6 +76,7 @@
         <ul class='list-unstyled fw-normal pb-1 small'>
           <li><a href='/6/plugins/' class='d-inline-flex align-items-center rounded'>Overview</a>
           </li>
+          <li><a href='/6/plugins/bi1.html' class='d-inline-flex align-items-center rounded'>Bootstrap Icons v1</a></li>
           <li><a href='/6/plugins/customDateFormat.html' class='d-inline-flex align-items-center rounded'>Custom Date
             Formats</a>
           </li>
