* fixes #2778 * sort of fixes #2775

--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class='row center-block mb-5'>
           <div class='col-12'>
-            <h4 class='row'>Metronic by keenthemes</h4>
+            <h4 class='row'>Metronic by Keenthemes</h4>
           </div>
           <div class='col-sm-12 col-md-3'>
             <a href='https://1.envato.market/7mWAG5' target='_blank'
