--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -76,17 +76,18 @@
         <ul class='list-unstyled fw-normal pb-1 small'>
           <li><a href='/6/plugins/' class='d-inline-flex align-items-center rounded'>Overview</a>
           </li>
+          <li><a href='/6/plugins/bi1.html' class='d-inline-flex align-items-center rounded'>Bootstrap Icons v1</a></li>
           <li><a href='/6/plugins/customDateFormat.html' class='d-inline-flex align-items-center rounded'>Custom Date
             Formats</a>
           </li>
-          <li><a href='/6/plugins/fa5.html' class='d-inline-flex align-items-center rounded'>Font Awesome
-            5</a></li>
-          <li><a href='/6/plugins/paint.html' class='d-inline-flex align-items-center rounded'>Paint (Custom
-            classes)</a></li>
-          <li><a href='/6/plugins/moment.html' class='d-inline-flex align-items-center rounded'>Momentjs</a>
-          </li>
           <li><a href='/6/plugins/floating-ui.html' class='d-inline-flex align-items-center rounded'>Floating UI</a>
           </li>
+          <li><a href='/6/plugins/fa5.html' class='d-inline-flex align-items-center rounded'>Font Awesome
+            5</a></li>
+          <li><a href='/6/plugins/moment.html' class='d-inline-flex align-items-center rounded'>Momentjs</a>
+          </li>
+          <li><a href='/6/plugins/paint.html' class='d-inline-flex align-items-center rounded'>Paint (Custom
+            classes)</a></li>
         </ul>
       </li>
     </ul>
