--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <p class='text-muted mb-0'>
-          Currently <strong>v6.4.1</strong>
+          Currently <strong>v6.4.3</strong>
           <span class='px-1'>&middot;</span>
           <a href='https://getdatepicker.com/5-4/' class='link-secondary'>v5 docs</a>
         </p>
@@ -55,10 +55,10 @@
 <code class='language-html'>&lt;!-- Popperjs --&gt;
 &lt;script src=&quot;https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js&quot; integrity=&quot;sha256-BRqBN7dYgABqtY9Hd4ynE+1slnEw+roEPFzQ7TRRfcg=&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 &lt;!-- Tempus Dominus JavaScript --&gt;
-&lt;script src=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.4.1/dist/js/tempus-dominus.min.js&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
+&lt;script src=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.4.3/dist/js/tempus-dominus.min.js&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 
 &lt;!-- Tempus Dominus Styles --&gt;
-&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.4.1/dist/css/tempus-dominus.min.css&quot; crossorigin=&quot;anonymous&quot;&gt;</code>
+&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.4.3/dist/css/tempus-dominus.min.css&quot; crossorigin=&quot;anonymous&quot;&gt;</code>
 </pre>
       </div>
     </div>
@@ -67,12 +67,12 @@
       <div class='container'>
         <div class='row center-block'>
           <h3>Get awesome Dashboard Templates</h3>
-          <p>Looking for a template with the datepicker ready to go? Then get check out these templates from our
+          <p>Looking for a template with the datepicker ready to go? Then check out these templates from our
             partners.</p>
         </div>
         <div class='row center-block mb-5'>
           <div class='col-12'>
-            <h4 class='row'>Metronic by keenthemes</h4>
+            <h4 class='row'>Metronic by Keenthemes</h4>
           </div>
           <div class='col-sm-12 col-md-3'>
             <a href='https://1.envato.market/7mWAG5' target='_blank'
@@ -99,7 +99,7 @@
         </div>
         <hr/>
         <div class='row center-block mt-5'>
-          <h4>Check out this other great themes.</h4>
+          <h4>Check out these other great themes.</h4>
         </div>
         <div class='row center-block mt-3 mb-5'>
           <div class='col-12'>
