--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,16 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.4.4</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed an issue with the date formatting</li>
+        <li>Fixed format escape brackets</li>
+        <li>Fixes setting a date to null #2774</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.4.1</h2>
       <h3>New</h3>
       <ul>
