adding placement option

--- a/src/docs/partials/options/display.html
+++ b/src/docs/partials/options/display.html
@@ -406,6 +406,15 @@
     </p>
   </div>
 
+  <div class='row'>
+    <h2 id='placement'>placement<a class='anchor-link' aria-label='Anchor' href='#placement'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
+    <p>
+      <strong>Accepts:</strong> 'top' | 'bottom' <strong>Defaults:</strong> 'bottom'<br />
+      Specifies whether the picker should be displayed at the top or bottom of the element passed to the picker instance.
+    </p>
+  </div>
+
   <div id='subToc' class='d-none'>
     <nav id='TableOfContents'>
       <ul>
@@ -452,6 +461,7 @@
           </ul></li>
         <li><a href='#inline'>Inline</a></li>
         <li><a href='#theme'>Theme</a></li>
+        <li><a href='#placement'>Placement</a></li>
       </ul>
     </nav>
   </div>
